Pagination working. Put Add Project in a new place. Fixed  sidebar entries to top when scrolling. Projects can be collapsed now. Todo text change starts on clicking on text as well as edit button. changed styles of several elements to give smoother appearance (not finished)

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -54,7 +54,7 @@ li {
     background-color: #096dd9 !important;
 }
 
-.sidebar-menu-item-project {
+.sidebar-menu-item {
     background-color: #f6f8fa;
     margin-bottom: 0 !important; 
     margin-top: 0 !important;
@@ -62,6 +62,30 @@ li {
     padding-top: 4px !important;
 }
 
-.sidebar-menu-item-project:hover, .sidebar-menu-item-project:active {
+.sidebar-menu-item:hover, .sidebar-menu-item:active {
     background-color: #dce6f1; 
+}
+
+.project-item {
+    padding-left: 34px !important;
+}
+
+.ant-list-footer {
+    padding: 0 !important;
+}
+
+.create-new-task {
+    background-color: #f0f2f5;
+    padding: 14px;
+    box-shadow: 0 -2px 3px #00000077;
+}
+
+.new-project {
+    color: #096dd9 !important;
+    text-align: center !important;
+    padding-left: 0px !important;
+}
+
+.new-project .ant-input {
+    margin-left: 7px !important;
 }
